Added the update and get user address and added their open api comments
